--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "style-loader": "^0.18.2",
     "vue": "^2.3.3",
     "vue-gh-pages": "^1.5.0",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vue-youtube-embed": "^2.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
